format all code using palantir codestyle